src/test/ui/issues/issue-18959.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-18959.rs:11:1
   |
LL | fn foo(b: &dyn Bar) {
   | ^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `foo` has generic type parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
